# ai-sdk-chat-kernel

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json  vitest.config.ts
.devcontainer/: devcontainer.json
ai_sdk_chat_kernel/: __init__.py
labextension/: package.json
lib/: federation.js  index.js
lite_kernel/: __init__.py
schema/: plugin.json
scripts/: sync-version.cjs
src/: federation.ts  federation.ts.backup  index.ts  models.ts  providers.ts  shareScope.ts
src/mcp-tools/: wiki-query.ts
tests/: README.md
tests/integration/: mcp-tools.spec.ts
tests/unit/: mcp-management.test.ts  wiki-query.test.ts
